--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
             <div class="project-container">
                 <div>
-                    <h3>Your projects</h3>
+                    <h3>My projects</h3>
                 </div>
                 <div class="project-boxes">
                     <!-- <div class="project-items">
