new project items, fixed layout when minimized

--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                                 <img class="project-images" src="./images/pexels-asim-alnamat-362993.jpg" alt="">
                             </div>
 
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                                 Quibusdam earum recusandae quam sit, praesentium molestias
                                 laudantium laboriosam molestiae odit inventore reprehenderit
                                 maiores architecto eaque magni, iusto error beatae sint nulla!
@@ -273,48 +274,35 @@
                     <div class="trending-boxes">
                         <div class="trending-items">
                             <div>
-                                <img src="./images/diego-ph-fIq0tET6llw-unsplash.jpg" style="
+                                <h4>Project 1</h4>
+
+                                <!-- <img src="./images/diego-ph-fIq0tET6llw-unsplash.jpg" style="
                                     object-fit: cover;
                                     border-radius: 50%;
                                     width: 25px;
                                     height: 25px;
-                                " alt="" />
+                                " alt="" /> -->
                             </div>
 
                             <p>Super Cool Project</p>
                         </div>
                         <div class="trending-items">
                             <div>
-                                <img src="./images/diego-ph-fIq0tET6llw-unsplash.jpg" style="
-                            object-fit: cover;
-                            border-radius: 50%;
-                            width: 25px;
-                            height: 25px;
-                        " alt="" />
+                                <h4>Project 1</h4>
                             </div>
 
                             <p>Super Cool Project</p>
                         </div>
                         <div class="trending-items">
                             <div>
-                                <img src="./images/diego-ph-fIq0tET6llw-unsplash.jpg" style="
-                            object-fit: cover;
-                            border-radius: 50%;
-                            width: 25px;
-                            height: 25px;
-                        " alt="" />
+                                <h4>Project 1</h4>
                             </div>
 
                             <p>Super Cool Project</p>
                         </div>
                         <div class="trending-items">
                             <div>
-                                <img src="./images/diego-ph-fIq0tET6llw-unsplash.jpg" style="
-                            object-fit: cover;
-                            border-radius: 50%;
-                            width: 25px;
-                            height: 25px;
-                        " alt="" />
+                                <h4>Project 1</h4>
                             </div>
 
                             <p>Super Cool Project</p>
