--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="content-links">
-                        <a href="#">
+                        <a href="./pages/robotics.html">
                             <!-- <img class="svg-image" src="./images/message.svg" alt="" /> -->
                             <!-- <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
                                 <path d="M20,2H4A2,2 0 0,0 2,4V22L6,18H20A2,2 0 0,0 22,16V4C22,2.89 21.1,2 20,2Z" />
