--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
             <!-- <div class="info"> -->
             <div id="arthor">
-                Created by <a href="#">Gerardo Hernandez Macoto</a>
+                Created by <br><a href="#">Gerardo Hernandez Macoto</a>
             </div>
             <div class="networks">
                 <ul>
