fixed home link style, created under construction page

--- a/pages/history.html
+++ b/pages/history.html
@@ -58,7 +58,7 @@
 
         <div id="history-container">
 
-            <div class="titles">
+            <div class="titles1">
                 <div>
                     <h3>Research Experience</h3>
                 </div>
